# SPOQAssist

./: .env.example  .gitignore  README.md  pytest.ini
_bmad/: config.toml
_bmad-output/brainstorming/: brainstorming-session-2026-07-22-0843.md  brainstorming-session-2026-07-23-0941.md
_bmad-output/implementation-artifacts/: 1-1-scaffold-monorepo-hub-and-outlook-addin.md  1-2-entra-sign-in-to-hub.md  1-3-mailbox-entitlement-gate.md  1-4-connect-mailbox-via-microsoft-graph.md  1-5-hub-health-and-unavailable-state-in-add-in.md  1-6-central-outlook-add-in-deployment-per-entra-entity.md  code-review-findings.md  deferred-work.md  (+21 more)
apps/hub-api/: README.md  pyproject.toml
apps/hub-api/app/: __init__.py  main.py
apps/hub-api/app/api/: actions.py  admin_ai.py  admin_ops.py  analyze.py  confirm.py  deps.py  feedback.py  health.py  mailbox_profiles.py  me.py  schedule.py
apps/hub-api/app/core/: config.py  errors.py  logging.py  security.py
apps/hub-api/app/db/: schema_ensure.py  session.py
apps/hub-api/app/db/repositories/: ai_store.py  mailboxes.py
apps/hub-api/app/domain/: enums.py  models.py  policies.py  schemas.py
apps/hub-api/app/management/: reembed.py  run_worker.py
apps/hub-api/app/services/: actions.py  analyze.py  attachments.py  audit.py  draft_language.py  history_sync.py  inference.py  learning.py  mail_graph.py  mail_read.py  precompute.py  profile_inspect.py  retention.py  retrieve.py  scheduling.py  thread_split.py
docker/: Dockerfile.api  docker-compose.yml
docs/: graph-scopes.md  processing-access-register.md
tests/: conftest.py
(+73 files in other folders)
