[project]
name = "spoqassist-hub-api"
version = "0.1.0"
description = "SpoqAssist Mac Studio hub API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.0",
  "PyJWT[crypto]>=2.9.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.0",
  "msal>=1.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "ruff>=0.8.0",
  "cryptography>=43.0.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
